Bug 1201629 - VS2015 build fails in suite/shell/src/nsWindowsShellService.cpp: error C2679: binary '=': no operator found r=Neil a=ewong in a CLOSED TREE